# Midori

./: .gitignore  LICENSE  README.md  compile_commands.json  compile_shaders.sh  meson.build  meson.options
.cache/clangd/index/: VkBootstrap.cpp.40A740E62DDAFC27.idx  VkBootstrap.h.1F772A210AF06C89.idx  VkBootstrapDispatch.h.B15D5BAED907E9B8.idx  file.cc.D62C6C95FA080907.idx  file.h.5C017D3DEAE9BB27.idx  main.cc.63064B3A138F3255.idx  simd_math.h.3313621820C69994.idx  simd_math_sse.cc.DC56591AA5FECFA2.idx  test_frag.h.42B58DF2CC78C44E.idx  test_frag_2.h.9D12727B9060D347.idx  test_frag_shadow.h.09D8312A360FEB20.idx  test_vert.h.193D5F4155034EF7.idx  test_vert_2.h.422D80ADDE6C8A7C.idx  test_vert_shadow.h.E16ECD76F166A5F0.idx  tiny_obj_loader.h.196C343883909AEC.idx  tiny_obj_loader.h.203F45038C26C917.idx  typedefs.h.E6646BA5D6901C1D.idx  vk_mem_alloc.h.E90FC80F5BCD350D.idx  vk_mem_alloc.h.FF608DC60F35EB93.idx  vma_usage.cc.903A9E2EE4C13350.idx  vma_usage.h.4FB5A6EEC2AF2DA5.idx
include/: typedefs.h
include/file/: file.h
include/platform/file/: file.h
include/platform/shared_library/: library.h  library_platform.h
include/platform/window/: window.h  window_platform.h
include/renderer/: renderer.h  renderer_api.h
include/renderer/renderer_vk/: renderer_vk_helpers.h  renderer_vk_utils.h
include/simd_math/: simd_math.h
include/vma/: vma_usage.h
shaders/: test.fsh  test.vsh  test2.fsh  test2.vsh  test_frag.h  test_frag_2.h  test_frag_shadow.h  test_shadow.fsh  test_shadow.vsh  test_vert.h  test_vert_2.h  test_vert_shadow.h
shaders/spv/: test_frag.spv  test_frag_2.spv  test_shadow_frag.spv  test_shadow_vert.spv  test_vert.spv  test_vert_2.spv
src/: main.cc
src/file/: file.cc
src/platform/file/: file.cc  file_posix.cc
src/platform/plugin/plugin_posix/: plugin_posix.cc
src/platform/shared_library/: library_posix.cc
src/platform/window/: window_sdl_vulkan.cc  window_xcb_vulkan.cc
src/platform/window/xcb_vulkan/: window_xcb_vulkan.cc
src/renderer/renderer_vk/: renderer_vk.cc  renderer_vk_helpers.cc  renderer_vk_utils.cc
src/simd_math/: simd_math_sse.cc
src/stb_image/: stb_image_usage.cc
src/vma/: vma_usage.cc
